# Hospital-system

./: admin.json  audit_log.txt  database.py  main.py  pyproject.toml  staff.json
.streamlit/: config.toml
attached_assets/: Pasted--Webview-Console-Port-5000-opened-on-Agent-Create-a-hospital-management-system-using-python-with-1741447888926.txt
data/: appointments.csv  billing.csv  inventory.csv  patients.csv  staff.csv
pages/: appointments.py  billing.py  inventory.py  patient_management.py  patients.py  reports.py  staff.py
styles/: custom.css
utils/: auth.py  data_manager.py
