[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=4.3.0",
    "extra-streamlit-components>=0.1.71",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "python-jose[cryptography]>=3.4.0",
    "streamlit-option-menu>=0.4.0",
    "streamlit>=1.43.1",
]
